Archive2/db/c37bbda97dfad9/output
main.cpp: In function ‘void f()’:
main.cpp:19:8: error: no match for ‘operator+’ (operand types are ‘Y’ and ‘Y’)
    (y1 + y2).print();
        ^
